Update authorship information

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,10 @@
 [metadata]
 name = pymm
 description = Python Wrapper for MetaMap
-author = Srikanth Mujjiga
-author-email = smujjiga@outlook.com
+author = Dr. Layth Qassem
+author-email = Layth888@gmail.com
 license = mit
-url = https://github.com/smujjiga/pymm
+url = https://github.com/dr-laythq/PythonMetaMap
 long-description = file: README.rst
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
