Refactor CLI and docs, update authorship

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@
 [metadata]
 name = pymm
 description = Python Wrapper for MetaMap
-author = Srikanth Mujjiga
-author-email = smujjiga@outlook.com
+author = Dr. Layth Qassem
+author-email = Layth888@gmail.com
 license = mit
 url = https://github.com/smujjiga/pymm
 long-description = file: README.rst
