CI: publish to TestPyPI via OIDC

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = pymm
+name = pythonmetamap
 description = Python Wrapper for MetaMap
 author = Srikanth Mujjiga
 author-email = smujjiga@outlook.com
