chore: set author to Dr. Layth Qassem <layth888@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,12 @@
 [metadata]
 name = pythonmetamap
 description = Python Wrapper for MetaMap
-author = Srikanth Mujjiga
-author-email = smujjiga@outlook.com
+author = Dr. Layth Qassem
+author_email = layth888@gmail.com
 license = mit
 url = https://github.com/smujjiga/pymm
-long-description = file: README.rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -26,7 +27,7 @@ package_dir =
     =src
 # Add here dependencies of your project (semicolon-separated), e.g.
 # install_requires = numpy; scipy
-install_requires = 
+install_requires = setuptools>=45
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov
 
