feat: add pymm and pymm-cli console entry points

--- a/setup.cfg
+++ b/setup.cfg
@@ -89,3 +89,8 @@ exclude =
 # This will be used when updating. Do not change!
 version = 3.0.3
 package = pymm
+
+[options.entry_points]
+console_scripts =
+    pymm = pymm.mimic_controller:main
+    pymm-cli = pymm.mimic_controller:main
