fix: drop setuptools runtime dep; use importlib.metadata for version

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,9 @@ package_dir =
     =src
 # Add here dependencies of your project (semicolon-separated), e.g.
 # install_requires = numpy; scipy
-install_requires = setuptools>=45
+python_requires = >=3.8
+# no runtime deps required for basic functionality
+install_requires =
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov
 
