--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 
 [metadata]
 name = pythonmetamap
+version = 0.1.6
 description = Python Wrapper for MetaMap
 author = Dr. Layth Qassem
 author_email = layth888@gmail.com
