Add nohup background retry processing and enhance dashboard with retry statuss

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = pythonmetamap
-version = 0.1.13
+version = 0.4.0
 description = Python Wrapper for MetaMap
 author = Dr. Layth Qassem
 author_email = layth888@gmail.com
@@ -31,6 +31,10 @@ package_dir =
 python_requires = >=3.8
 # no runtime deps required for basic functionality
 install_requires =
+    psutil>=5.9.0
+    colorama>=0.4.4
+    tqdm>=4.64.0
+    rich>=12.0.0
 # Add here test requirements (semicolon-separated)
 tests_require = pytest; pytest-cov
 
