--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,12 @@
 # numpy==1.13.3
 # scipy==1.0
 
+# PythonMetaMap dependencies
+psutil>=5.9.0
+colorama>=0.4.4
+tqdm>=4.64.0
+rich>=12.0.0
+setuptools>=60.0.0
+wheel>=0.37.0
+pytest>=7.0.0
+
