--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,6 @@ setuptools>=60.0.0
 wheel>=0.37.0
 pytest>=7.0.0
 
+# Optional dependencies
+JPype1>=1.4.0  # For direct Java-Python bridge to MetaMap
+
