--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,17 @@ psutil>=5.9.0
 colorama>=0.4.4
 tqdm>=4.64.0
 rich>=12.0.0
+click>=8.0.0
 setuptools>=60.0.0
 wheel>=0.37.0
 pytest>=7.0.0
 
-# Optional dependencies
+# Java integration
 JPype1>=1.4.0  # For direct Java-Python bridge to MetaMap
+
+# Data analysis and visualization
+pandas>=1.3.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+openpyxl>=3.0.0  # For Excel export
 
