--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
 # Core dependencies
 click>=8.0.0
-rich>=10.0.0
+rich>=13.0.0
 psutil>=5.8.0
-tqdm>=4.60.0
-
-# MetaMap integration
-jpype1>=1.4.0
-pyMetaMap>=0.2
+tqdm>=4.62.0
+pathlib2>=2.3.6
+typing-extensions>=4.0.0
 
 # Data processing
 pandas>=1.3.0
-numpy>=1.20.0
-openpyxl>=3.0.0
-chardet>=4.0.0
+numpy>=1.21.0
 
-# System requirements checking
-distro>=1.5.0
-py-cpuinfo>=8.0.0
-
-# Analysis (optional)
+# Visualization (optional)
 matplotlib>=3.4.0
 seaborn>=0.11.0
-scikit-learn>=0.24.0
+plotly>=5.3.0
 wordcloud>=1.8.0
+
+# Excel support (optional)
+openpyxl>=3.0.0
+xlsxwriter>=3.0.0
+
+# Development dependencies
+pytest>=6.2.0
+pytest-cov>=2.12.0
+black>=21.7b0
+flake8>=3.9.0
